syntax = "proto3";
import "google/protobuf/empty.proto";

package list;

message Item {
  string id = 1;
  string title = 2;
  string status = 3;
}

message ItemFilterReq{
  string status = 1;
}

message CreateItemReq{
  string title = 1;
  string status = 2;
}

message ResultResponse {
  repeated Item results = 1;
}

message ItemReq{
  string id = 1;
}

service ListService{
  rpc GetAllItems(google.protobuf.Empty) returns(ResultResponse);
  rpc CreateItem(CreateItemReq) returns(Item); 
  rpc DeleteItem(ItemReq) returns(Item);
  rpc FilterItems(ItemFilterReq) returns(stream Item);
}


